--- a/Application/Admin/View/Reception/addColumn.html
+++ b/Application/Admin/View/Reception/addColumn.html
@@ -29,7 +29,7 @@
     <h2>{$modular}</h2><?php echo session("flash_error");?><?php echo session("flash_success");?>
 </div>
 
-<form onsubmit="return checkInput();" action="{:U()}" method="post" class="form-horizontal" enctype="multipart/form-data">
+<form onsubmit="return checkInput();" action="{:U('',array('savepath'=>'column'))}" method="post" class="form-horizontal" enctype="multipart/form-data">
     <div class="form-item">
         <label class="item-label">请输入栏目名称</label>
         <div class="controls">
@@ -70,7 +70,7 @@
         $("#into_img").show();
     }
     //导航高亮
-    highlight_subnav('{:U('Reception/column')}');
+    highlight_subnav('{:U("Reception/column")}');
 
     setTimeout(function(){
         $(".alert").remove();
