--- a/Application/Home/View/Panel/image_text.html
+++ b/Application/Home/View/Panel/image_text.html
@@ -48,19 +48,20 @@
 		<div class="article_list">
 			<p>选择文章</p>
 			<ul>
-				<volist name="data['article_list']" id="vo">
+				<volist name="list['article_list']" id="vo">
 					<li class="article_item">
 						<input id="article_{$vo.id}" type="radio" name="article_id" value="{$vo.id}">
 						<label for="article_{$vo.id}">{$vo.title}</label>
 						<img src="__IMAGES__/panel/viwepagerAdd2.png">
 						<input type="hidden" name="" value="{$vo.content}">
+						
 						<input class="img_src" type="hidden" name="" value="__UPLOADS__/{$vo.savepath}{$vo.savename}">
 					</li>
 				</volist>
 			</ul>
 		</div>
 		<div class="page" onclick="return false">
-			{$data['page']}
+			{$list['page']}
 		</div>
 	</div>
 	<input id="target_url" type="hidden" name="" value="{:U('Panel/article_info')}">
