--- a/Application/Home/View/Widget/ArticleSort/first_theme.html
+++ b/Application/Home/View/Widget/ArticleSort/first_theme.html
@@ -1,10 +1,10 @@
-{$option|dump}
-<div class='article_container controller' data-id="{$cname}">
+<div class='article_container controller' data-name="{$cname}">
 	<div class='controller-title'>{$option['title']}</div>
 	<div class='article_sort'>
 		<ul class = 'article_sort_list'>
-			<ul class = 'article_sort_list' data='"+column_id+"'>
-			{$option['list']}
+			<volist name="option['info']" id="vo">
+				<li><a class="article-link" href="{:U('Panel/readHtml',array('column_id'=>$vo[column_id]))}">{$vo['name']}</a></li>
+			</volist>
 		</ul>
 	</div>
 </div>
