--- a/Application/Home/View/Panel/article_list.html
+++ b/Application/Home/View/Panel/article_list.html
@@ -82,12 +82,11 @@
 			</volist>
 		</ul>
 	</div>
-	<input id="target_url" type="hidden" name="" value="{:U('Panel/article_type')}">
-	<input id="article_url" type="hidden" name="" value="{:U('Panel/article_info')}?article_id=">
-	<input id="img_url" type="hidden" name="" value="{:C('UPLOAD_ROOT')}">
-	<input id="home_img" type="hidden" name="" value="__IMAGES__">
-	<input type='hidden' id="controller-id" value="{$controller_id}">
-	
+<!-- 	<input id="target_url" type="hidden" name="" value="{:U('Panel/article_type')}">
+<input id="article_url" type="hidden" name="" value="{:U('Panel/article_info')}?article_id=">
+<input id="img_url" type="hidden" name="" value="{:C('UPLOAD_ROOT')}">
+<input id="home_img" type="hidden" name="" value="__IMAGES__">
+<input type='hidden' id="controller-id" value="{$controller_id}"> -->
 	<input id="status" type="hidden" name="" value="{$status}">
 	<input id="save-url" type="hidden" value="{:U('panel/save_widget')}">
 </body>
