--- a/Application/Home/View/Panel/PicturesShow.html
+++ b/Application/Home/View/Panel/PicturesShow.html
@@ -16,21 +16,30 @@
             <div class="title">
                 <span>模块标题:</span>
                 <span>
-                    <input type="text" class="setTitle" value="图片展示"/>
+                    <input type="text" class="setTitle" value="{$title}"/>
                 </span>
             </div>
             <div class="type">
                 <div class="type_title">图册样式:</div>
                 <div class="img">
-                    <div class="pattern">
-                        <div class="hr"><img type="1" src="__IMAGES__/panel/such2.jpg"></div>
-                    </div>
-                    <div class="pattern">
-                        <div class=""><img type="2" src="__IMAGES__/panel/such3.jpg"></div>
-                    </div>
-                    <div class="pattern">
-                        <div class=""><img type="3" src="__IMAGES__/panel/square.png"></div>
-                    </div>
+                    <!--<img type="1" src="__IMAGES__/panel/such1.jpg">-->
+                    <!--<img type="2" src="__IMAGES__/panel/such2.jpg">-->
+                    <!--<img type="3" src="__IMAGES__/panel/such4.jpg">-->
+                    <empty name="theme">
+
+                        <else/>
+                        <foreach name="theme" item="vo">
+                            <if condition="$vo.name eq $primary_type">
+                                <div class="pattern">
+                                    <div class="hr"><img type="{$vo.name}" src="__UPLOADS__/{$vo.savepath}{$vo.savename}"></div>
+                                </div>
+                            <else/>
+                                <div class="pattern">
+                                    <div class=""><img type="{$vo.name}" src="__UPLOADS__/{$vo.savepath}{$vo.savename}"></div>
+                                </div>
+                            </if>
+                        </foreach>
+                    </empty>
                 </div>
                 <!--<div class="hint">-->
                     <!--<span>[注：该样式最多显示10张图片]</span>-->
@@ -46,14 +55,25 @@
                             <h3 style="text-align: center; color: red;">无相册,请去添加</h3>
                         <else />
                             <foreach name="album_list" item="vo">
-                                <tr date="{$vo.id}">
-                                    <td class="ablumName">
-                                        {$vo.name}
-                                    </td>
-                                    <td class="identification">
-                                        <img src="__IMAGES__/panel/viwepagerAdd2.png">
-                                    </td>
-                                </tr>
+                                <if condition="$vo.id eq $primary_album">
+                                    <tr class="pitch_album" style="background: #D3D1CB;" date="{$vo.id}">
+                                        <td class="ablumName">
+                                            {$vo.name}
+                                        </td>
+                                        <td class="identification">
+                                            <img src="__IMAGES__/panel/viwepagerAdd1.png">
+                                        </td>
+                                    </tr>
+                                    <else/>
+                                    <tr date="{$vo.id}">
+                                        <td class="ablumName">
+                                            {$vo.name}
+                                        </td>
+                                        <td class="identification">
+                                            <img src="__IMAGES__/panel/viwepagerAdd2.png">
+                                        </td>
+                                    </tr>
+                                </if>
                             </foreach>
                         </empty>
                     </table>
