--- a/Application/Home/View/Widget/PicturesShow/PicturesShow_theme.html
+++ b/Application/Home/View/Widget/PicturesShow/PicturesShow_theme.html
@@ -1,11 +1,11 @@
 <div class='controller' data-name='{$controllerName}'>
     <div class='controller-title'>{$title}</div>
-    <if condition="$type eq 3">
+    <if condition="$type eq 'tile'">
         <div class='picShowList'>
             <foreach name="pic_list" item="vo">
                 <img src='__UPLOADS__/{$vo.savepath}/{$vo.savename}'>
             </foreach>
-    <elseif condition="$type eq 2" />
+    <elseif condition="$type eq 'select_right'" />
         <div class='showPic showRight'>
             <img src='__UPLOADS__/{$frist_img}'>
         </div>
