--- a/Application/Home/View/Panel/index.html
+++ b/Application/Home/View/Panel/index.html
@@ -204,8 +204,9 @@
 	<input type="hidden" id="sort-column-url" value="__CONTROLLER__/sort_column">
 
 	<input type="hidden" id="writeHtml-url" now-column="{$nowColumn.id}" value="__CONTROLLER__/writeHtml/column_id/">
-	<input type="hidden" id="writeArticle-url" value="__CONTROLLER__/writeArticle/">
+	<input type="hidden" id="writeDesc-url" value="__CONTROLLER__/writeDesc">
 	<input type="hidden" id="readHtml-url" value="__CONTROLLER__/readHtml/column_id/">
+	<input type="hidden" id="readDesc-url" value="__CONTROLLER__/readDesc">
 	<input type="hidden" id="control-widget-url" value="__CONTROLLER__/control_widget/name/">
 	<input type="hidden" id="save-widget-url" value="{:U('Panel/save_widget')}">
 	<div id="top-alert-back">
