--- a/Application/Home/View/Widget/Magic/one_theme.html
+++ b/Application/Home/View/Widget/Magic/one_theme.html
@@ -1,7 +1,7 @@
 <div class='controller show_nav {$theme}' data-name='{$cname}'>
   <volist id="vo" name="nav_list" key="key">
     <div class="nav_all nav">
-      <a href="{$vo.url}">
+      <a href="{$vo.url}.html">
         <div style="background-image: url({$vo.icon_url})"></div>
         <p>{$vo.name}</p>
       </a>
