--- a/Application/Home/View/Widget/Magic/two_theme.html
+++ b/Application/Home/View/Widget/Magic/two_theme.html
@@ -1,7 +1,7 @@
 <div style='display: inline-block;' class='controller show_nav_{$theme_name}' data-name='{$cname}'>
   <volist id="vo" name="nav_list" key="key">
     <div class="nav_all nav-{$key%6}">
-      <a href="{$vo.url}">
+      <a href="{$vo.url}.html">
         <div style="background-image: url({$vo.img})"></div>
         <p>{$vo.name}</p>
         <span>></span>
