--- a/Application/Home/View/Widget/ArticleList/first_theme.html
+++ b/Application/Home/View/Widget/ArticleList/first_theme.html
@@ -6,14 +6,14 @@
 		<ul class='article_list'>
 		<volist name="article_info" id="item">
 		<if condition="$key eq 0">
-			<li>
-				<a class='article-link main_article' href="{$option['column_url']}.html" data-url="{$option['article_url']}{$item['id']}/column_id/{$item['column_id']}">
+			<li data-id="{$item['id']}">
+				<a class='article-link main_article' href="article/article_{$item['id']}.html">
 				<div class='first_article' style="background-image:url({$item['savepath']}{$item['savename']}); background-repeat: no-repeat; background-size:cover">
 					<div class='article_title'>{$item['title']}</div>
 				</div>
 		<else/>
-			<li>
-				<a class='article-link sub_article' href="{$option['column_url']}.html" data-url="{$option['article_url']}{$item['id']}/column_id/{$option['column_id']}">
+			<li data-id="{$item['id']}">
+				<a class='article-link sub_article' href="article/article_{$item['id']}.html">
 				<div class='article_text'>
 					<ul><li class='article_title'>{$item['title']}</li></ul>
 				</div>
