--- a/Application/Home/View/Website/base.html
+++ b/Application/Home/View/Website/base.html
@@ -65,6 +65,7 @@
 			<div class="side-head">网站资源</div>
 			<div class="side-item"><a href="{:U('Album/index')}">相册</a></div>
 			<div class="side-item"><a href="{:U('Article/index')}">文章</a></div>
+			<div class="side-item"><a href="{:U('Production/index')}">产品</a></div>
 		</div>
 		<!-- /边栏 -->
 		<!-- 内容区 -->
