--- a/Application/Admin/View/Station/produce.html
+++ b/Application/Admin/View/Station/produce.html
@@ -124,7 +124,7 @@
             <!-- <td><input class="ids" type="checkbox" name="id[]" value="{$vo.uid}" /></td> -->
 			<td>{$vo.site_name} </td>
 			<td>{$vo.name}</td>
-			<td>{$vo.type}</td>
+			<td>{$vo.typename}</td>
 			<td class="pic"><eq name="vo['pic_id']" value="0"><img src="__ROOT__/Uploads/Admin/default_Img/default.jpg"><else/><img src="__ROOT__/Uploads/{$vo.savepath}{$vo.savename}"></eq></td>
 			<td>{$vo.price}</td>
 			<td><a href="{$vo.url}"> {$vo.url} </a></td>
